language-selector (0.66) UNRELEASED; urgency=low

  * LanguageSelector/LangCache.py, tests/test_lang_cache.py: Drop some dead
    code.
  * data/pkg_depends: Install poppler-data for all languages. (LP: #893920)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 06 Feb 2012 11:51:57 +0100

language-selector (0.65) precise; urgency=low

  [ Colin Watson ]
  * check-language-support: Ignore errors from locale.setlocale.  We might
    well be running from the installer before locales have been properly
    configured (LP: #925330).
  * Clean up lots of pyflakes warnings.
  * LanguageSelector/FontConfig.py, LanguageSelector/LocaleInfo.py,
    LanguageSelector/utils.py: Use string methods rather than deprecated
    string functions.

  [ Gunnar Hjalmarsson ]
  * LanguageSelector/LocaleInfo.py: Prevent makeEnvString() from
    processing the empty string (LP: #926049).
  * fontconfig/30-cjk-aliases.conf: Changes due to Korean migration to
    fonts-nanum (LP: #792471).
  * debian/control: pyqt4-dev-tools added to build-depends (the pyuic4
    program is called from LanguageSelector/qt/Makefile).

  [ Martin Pitt ]
  * debian/control: Use standard X-Python-Version field.
  * debian/control: Bump Standards-Version to 3.9.2.
  * debian/control: Move transitional packages to Priority: Extra to quiesce
    lintian.
  * debian/control: Drop Vcs-Bzr. We move to the standard
    lp:ubuntu/language-selector branch now.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 06 Feb 2012 07:23:43 +0100

language-selector (0.64) precise; urgency=low

  * language_support_pkgs.py: Fix raising of NotImplementedError.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 03 Feb 2012 08:36:57 +0100

language-selector (0.63) precise; urgency=low

  [ Martin Pitt ]
  * LanguageSelector/LanguageSelector.py: Fix KeyError crash on a nonexisting
    package. (LP: #843430)
  * language_support_pkgs.py: Add PackageKit WhatProvides() plugin for
    "locale()" search. Register it in setup.py.